fix: configuracion base de datos

--- a/app/.env
+++ b/app/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://role_1b40c5ce8:nxSKvdv37TIMdZZZAYOooe2JqvqM80oM@db-1b40c5ce8.db002.hosteddb.reai.io:5432/1b40c5ce8?connect_timeout=15"
+DATABASE_URL="postgresql://neondb_owner:npg_UoVOku7Le6bW@ep-empty-feather-aeucoywp-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
